# -*- eval: (cargo-minor-mode 1) -*-

[package]
# metadata
name = "serde_sexpr"
description = "KiCAD v6 File Format"
license = "Apache-2.0 OR LGPL-3.0"

# version
version = "0.0.0"
publish = false

# compiler info
edition = "2021"

[dependencies]
itoa = "1.0"
paste = "1.0"
serde = { version = "1.0.132", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"
once_cell = "1.9"
