# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "serde_sexpr"
version = "0.0.0"
publish = false
edition = "2021"

license = "Apache-2.0 OR LGPL-3.0"
description = "KiCAD v6 S-Expression Format"
categories = ["encoding"]
keywords = ["s-expression", "s-expr", "kicad", "serde", "serialization"]

repository = "https://github.com/kicad-rs/serde_sexpr"

[dependencies]
backtrace = { version = "0.3.63", optional = true }
itoa = "1.0"
once_cell = "1.9"
paste = "1.0"
serde = { version = "1.0.132", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
indoc = "1.0"
pretty_assertions = "1.0"
